// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders base DNS with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"testDNS_subhosted_zone_0D42EC63\\": {
        \\"name\\": \\"dev.gobowling.info\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS/subhosted_zone\\",
            \\"uniqueId\\": \\"testDNS_subhosted_zone_0D42EC63\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"testDNS_subhosted_zone_ns_5F02B4AB\\": {
        \\"name\\": \\"dev.gobowling.info\\",
        \\"records\\": \\"\${aws_route53_zone.testDNS_subhosted_zone_0D42EC63.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.testDNS_main_hosted_zone.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"testDNS_subhosted_zone_ns_5F02B4AB\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_route53_zone\\": {
      \\"testDNS_main_hosted_zone\\": {
        \\"name\\": \\"gobowling.info\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS_main_hosted_zone\\",
            \\"uniqueId\\": \\"testDNS_main_hosted_zone\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders base DNS without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_route53_zone\\": {
      \\"testDNS_subhosted_zone_0D42EC63\\": {
        \\"name\\": \\"dev.gobowling.info\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS/subhosted_zone\\",
            \\"uniqueId\\": \\"testDNS_subhosted_zone_0D42EC63\\"
          }
        }
      }
    },
    \\"aws_route53_record\\": {
      \\"testDNS_subhosted_zone_ns_5F02B4AB\\": {
        \\"name\\": \\"dev.gobowling.info\\",
        \\"records\\": \\"\${aws_route53_zone.testDNS_subhosted_zone_0D42EC63.name_servers}\\",
        \\"ttl\\": 86400,
        \\"type\\": \\"NS\\",
        \\"zone_id\\": \\"\${data.aws_route53_zone.testDNS_main_hosted_zone.zone_id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS/subhosted_zone_ns\\",
            \\"uniqueId\\": \\"testDNS_subhosted_zone_ns_5F02B4AB\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_route53_zone\\": {
      \\"testDNS_main_hosted_zone\\": {
        \\"name\\": \\"gobowling.info\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testDNS_main_hosted_zone\\",
            \\"uniqueId\\": \\"testDNS_main_hosted_zone\\"
          }
        }
      }
    }
  }
}"
`;
